--- a/general/sfw_die_page.html
+++ b/general/sfw_die_page.html
@@ -4,29 +4,47 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="ñache-ñontrol" content="no-cache">
+    <meta http-equiv="ñache-ñontrol" content="private">
+    <meta http-equiv="ñache-ñontrol" content="max-age=0, must-revalidate">
+    <meta http-equiv="ñache-ñontrol" content="max-age=0, proxy-revalidate">
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
 
-<!--  <title></title> -->
+    <title>Blacklisted</title> 
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 <style>
-    html{font-size: 14pt;}
+    html{font-size: 10pt;font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;background: #f1f1f1;}
     h1{text-align:center}
+    a:hover,
+    a:active {
+            color: #00a0d2;
+    }
     h1.main{margin-top: 1em;margin-bottom: 3em;}
-    div.container {text-align:center;}
-    div.container p.js_notice{width: 60%; display: inline-block;}
-    div.footer {color: #666; position: absolute; bottom: 1em; text-align: center; width: 100%;}
+    div.container {text-align:center;
+                background: #fff;
+            color: #444;
+            margin: 2em auto;
+            padding: 1em 2em;
+            max-width: 700px;
+            -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.13);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.13);}
+    div.container p.js_notice{width: 100%%; display: inline-block;}
+    div.footer {color: #666; position: fixed; bottom: 1em; text-align: center; width: 100%%;}
     div.footer a {color: #666; vertical-align:bottom; text-align: center;}
     div#js_passed {display:none;}
-
     @media (max-width: 600px) {
     }
 </style>
 <script>
-var reload_timeout = 3000;
-function set_spamFireWallCookie(cookie_name, cookie_value) {
-    document.cookie = cookie_name + "=" + escape(cookie_value) + "; path=/;";
+var reload_timeout = %d;
+function set_spamFireWallCookie() {
+    document.cookie = "%s=" + escape('%s') + "; path=/";
+    document.cookie = "ct_sfw_passed=1; path=/";
     return null;
 }
 function get_current_url() {
@@ -38,15 +56,15 @@ function get_current_url() {
 
 <body>
     <div class="container">
-        <h1 class="main">SpamFireWall is activated for your IP <a href="https://cleantalk.org/blacklists/{REMOTE_ADDRESS}" target="_blank">{REMOTE_ADDRESS}</a></h1>
+        <h1 class="main">SpamFireWall is activated for your IP <a href="https://cleantalk.org/blacklists/%s" target="_blank">%s</a></h1>
         
         <div id="js_info"><br />To continue working with web site, please make sure that you have enabled JavaScript.</div>
         
         <div id="js_passed">
-        <h3>Please click bellow to pass protection,</h3>
-        <a href="{REQUEST_URI}"><script>get_current_url();</script></a>
+        <h3>Please click bellow to pass protection</h3>
+        <a href='' onclick="set_spamFireWallCookie();window.location.reload(1)"><script>get_current_url();</script></a>
         <br /><br /><br />
-        <p class="js_notice">Or you will be automatically redirected to the requested page after 3 seconds.</p>
+        <p class="js_notice">Or you will be automatically redirected to the requested page after %d seconds</p>
         </div>
     </div>
     <div class="footer">
@@ -55,9 +73,8 @@ function get_current_url() {
     <script type="text/javascript">
         document.getElementById('js_info').style.display = 'none';
         document.getElementById('js_passed').style.display = 'block';
-        set_spamFireWallCookie('ct_sfw_pass_key','{SFW_COOKIE}');
-        set_spamFireWallCookie('ct_sfw_passed','1');
         setTimeout(function(){
+            set_spamFireWallCookie();
             window.location.reload(1);
         }, reload_timeout);
     </script>
