--- a/general/sfw_die_page.html
+++ b/general/sfw_die_page.html
@@ -41,10 +41,9 @@
     }
 </style>
 <script>
-var reload_timeout = %d;
-function set_spamFireWallCookie() {
-    document.cookie = "%s=" + escape('%s') + "; path=/";
-    document.cookie = "ct_sfw_passed=1; path=/";
+var reload_timeout = 3000;
+function set_spamFireWallCookie(cookie_name, cookie_value) {
+    document.cookie = cookie_name + "=" + escape(cookie_value) + "; path=/;";
     return null;
 }
 function get_current_url() {
@@ -56,13 +55,13 @@ function get_current_url() {
 
 <body>
     <div class="container">
-        <h1 class="main">SpamFireWall is activated for your IP <a href="https://cleantalk.org/blacklists/%s" target="_blank">%s</a></h1>
+        <h1 class="main">SpamFireWall is activated for your IP <a href="https://cleantalk.org/blacklists/{REMOTE_ADDRESS}" target="_blank">{REMOTE_ADDRESS}</a></h1>
         
         <div id="js_info"><br />To continue working with web site, please make sure that you have enabled JavaScript.</div>
         
         <div id="js_passed">
         <h3>Please click bellow to pass protection</h3>
-        <a href='' onclick="set_spamFireWallCookie();window.location.reload(1)"><script>get_current_url();</script></a>
+        <a href='{REQUEST_URI}'><script>get_current_url();</script></a>
         <br /><br /><br />
         <p class="js_notice">Or you will be automatically redirected to the requested page after %d seconds</p>
         </div>
@@ -73,8 +72,9 @@ function get_current_url() {
     <script type="text/javascript">
         document.getElementById('js_info').style.display = 'none';
         document.getElementById('js_passed').style.display = 'block';
+        set_spamFireWallCookie('ct_sfw_pass_key','{SFW_COOKIE}');
+        set_spamFireWallCookie('ct_sfw_passed','1');
         setTimeout(function(){
-            set_spamFireWallCookie();
             window.location.reload(1);
         }, reload_timeout);
     </script>
