--- a/general/sfw_die_page.html
+++ b/general/sfw_die_page.html
@@ -72,10 +72,12 @@ function get_current_url() {
     <script type="text/javascript">
         document.getElementById('js_info').style.display = 'none';
         document.getElementById('js_passed').style.display = 'block';
-        set_spamFireWallCookie('ct_sfw_pass_key','{SFW_COOKIE}');
-        set_spamFireWallCookie('ct_sfw_passed','1');
         setTimeout(function(){
-            window.location.reload(1);
+            set_spamFireWallCookie('ct_sfw_pass_key','{SFW_COOKIE}');
+            set_spamFireWallCookie('ct_sfw_passed','1');
+        }, 50);
+        setTimeout(function(){
+            window.location.href=window.location.href + (window.location.search === '' ? '?sfw=pass' : '&sfw=pass');
         }, reload_timeout);
     </script>
 </body>
