--- a/general/sfw_die_page.html
+++ b/general/sfw_die_page.html
@@ -63,7 +63,7 @@ function get_current_url() {
         <h3>Please click bellow to pass protection</h3>
         <a href='{REQUEST_URI}'><script>get_current_url();</script></a>
         <br /><br /><br />
-        <p class="js_notice">Or you will be automatically redirected to the requested page after %d seconds</p>
+        <p class="js_notice">Or you will be automatically redirected to the requested page after 5 seconds</p>
         </div>
     </div>
     <div class="footer">
