--- a/general/sfw_die_page.html
+++ b/general/sfw_die_page.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="ñache-ñontrol" content="no-cache">
-    <meta http-equiv="ñache-ñontrol" content="private">
-    <meta http-equiv="ñache-ñontrol" content="max-age=0, must-revalidate">
-    <meta http-equiv="ñache-ñontrol" content="max-age=0, proxy-revalidate">
+    <meta http-equiv="ï¿½ache-ï¿½ontrol" content="no-cache">
+    <meta http-equiv="ï¿½ache-ï¿½ontrol" content="private">
+    <meta http-equiv="ï¿½ache-ï¿½ontrol" content="max-age=0, must-revalidate">
+    <meta http-equiv="ï¿½ache-ï¿½ontrol" content="max-age=0, proxy-revalidate">
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
@@ -43,7 +43,10 @@
 <script>
 var reload_timeout = 5000;
 function set_spamFireWallCookie(cookie_name, cookie_value) {
-    document.cookie = cookie_name + "=" + escape(cookie_value) + "; path=/;";
+    var date = new Date,
+        domain = document.location.host;
+    date.setDate(date.getDate() + 30);
+    document.cookie = cookie_name + '=' + escape(cookie_value) + '; path=/; domain=.' + domain + ' ;expires=' + date.toUTCString();
     return null;
 }
 function get_current_url() {
