--- a/sources/Cleantalk/Common/Firewall/Modules/die_page_sfw.html
+++ b/sources/Cleantalk/Common/Firewall/Modules/die_page_sfw.html
@@ -96,6 +96,8 @@
 		<h3>{TEST_IP__HEADER} {TEST_IP}</h3>
 
 		<h2>{TEST_TITLE}</h2>
+
+		<h2>{MESSAGE_IP_STATUS}</h2>
 		
         <div id='js_info'><br />{SFW_DIE_MAKE_SURE_JS_ENABLED}</div>
 
